class6/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: student-portal
  namespace: student-portal
spec:
  selector:
    app: student-portal
  ports:
    - protocol: TCP
      # service port
      port: 8080
      # container port
      targetPort: 8000
  type: ClusterIP
